--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta property="og:image" content="resources/fp_icon.jpg" />
-        <meta property="og:description" content="A WebGL implementation of the Encom Boardroom visualization in Tron: Legacy" />
-        <title>Encom Globe</title>
+        <meta property="og:description" content="A WebGL project to bring GIS to the masses" />
+        <title>Tellus Forge</title>
 
         <!-- these are just for the demo page / options -->
         <script src="//code.jquery.com/jquery-2.0.3.min.js"></script>
@@ -399,14 +399,12 @@
     <body>
         <div id="container">
             <div id="banner">
-                Encom Globe
-                <small>by <a href="http://twitter.com/arscan">@arscan</a></small>
-
+                Tellus Forge
             </div>
             <div id="globe">
             </div>
             <div id="info-box">
-                A tribute to the <a href="http://work.gmunk.com/TRON-Board-Room">boardroom scene</a> in Disney's <a href="http://www.imdb.com/title/tt1104001/">Tron: Legacy</a>.  Built for reuse. Source on <a href="http://github.com/arscan/encom-globe/" class="github-link">Github</a>.
+                Create an account or login.
             </div>
             <div id="options">
                 <div id="options-content">
@@ -445,7 +443,7 @@
                         </label>
                         <input type="text" id="globe-spr" data-slider="true" data-slider-range="1, 120" data-slider-step="1" data-slider-highlight="true" value="28"/>
 
-                        <!--
+                        
                         <label>
                             Points per Degree
                         </label>
@@ -455,7 +453,7 @@
                             Point Size
                         </label>
                         <input type="text" id="globe-ps" data-slider="true" data-slider-range=".1,1.0" data-slider-step=".1" data-slider-highlight="true" value=".6"/>
-                        -->
+                        
 
                         <label>
                             Intro Duration (ms)
